--- a/blocks/edit-form/__title/edit-form__title.css
+++ b/blocks/edit-form/__title/edit-form__title.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px
+  line-height: 29px;
 }
 @media (max-width: 768px) {
   .edit-form__title {
