fix: исправить замечания ревьюера

--- a/blocks/edit-form/__save/edit-form__save.css
+++ b/blocks/edit-form/__save/edit-form__save.css
@@ -1,8 +1,12 @@
 .edit-form__save {
-  padding: 18px 125px;
+  width: 100%;
+  height: 50px;
+  padding: 14px 125px;
+  margin-top: 48px;
   box-sizing: border-box;
   background: #000;
   border-radius: 2px;
+  border: none;
   color: #fff;
   font-weight: 400;
   font-size: 18px;
@@ -16,7 +20,7 @@
 }
 @media (max-width: 768px) {
   .edit-form__save {
-    margin-top: 15px;
+    margin-top: 45px;
     padding: 14px 82px;
     font-size: 14px;
     line-height: 17px;
