--- a/blocks/edit-form/__title/edit-form__title.css
+++ b/blocks/edit-form/__title/edit-form__title.css
@@ -1,12 +1,12 @@
 .edit-form__title {
-  margin: 0;
+  margin: 0 0 44px 0;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
 }
 @media (max-width: 768px) {
   .edit-form__title {
-    margin-bottom: 35px;
+    margin-bottom: 69px;
     font-size: 18px;
     line-height: 22px;
   }  
