--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -1,16 +1,12 @@
 .edit-form {
   width: 430px;
-  height: 330px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: space-between;
   padding: 36px;
   box-sizing: border-box;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   background-color: #fff;
   color: #000;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -19,8 +15,6 @@
 @media (max-width: 768px) {
   .edit-form {
     width: 282px;
-    height: 322px;
     padding: 25px 22px;
-    top: 43%;
   }  
 }
