--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,8 +1,10 @@
 .header__logo {
   width: 142px;
+  margin-bottom: 37px;
 }
 @media (max-width: 768px) {
   .header__logo {
     width: 104px;
+    margin-bottom: 28px;
   }  
 }
