--- a/blocks/edit-form/__save/edit-form__save.css
+++ b/blocks/edit-form/__save/edit-form__save.css
@@ -1,7 +1,7 @@
 .edit-form__save {
   width: 100%;
-  height: 50px;
-  padding: 14px 125px;
+  padding-top: 14px;
+  padding-bottom: 14px;
   margin-top: 48px;
   box-sizing: border-box;
   background: #000;
@@ -21,7 +21,6 @@
 @media (max-width: 768px) {
   .edit-form__save {
     margin-top: 45px;
-    padding: 14px 82px;
     font-size: 14px;
     line-height: 17px;
   }  
