--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -10,6 +10,7 @@
 }
 @media (max-width: 768px) {
   .profile__description {
+    max-width: 100%;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
