--- a/pages/index.css
+++ b/pages/index.css
@@ -28,8 +28,11 @@
 
 @import url(../blocks/overlay/overlay.css);
 @import url(../blocks/overlay/_shown/overlay_shown.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__close/popup__close.css);
+
 @import url(../blocks/edit-form/edit-form.css);
-@import url(../blocks/edit-form/__title/edit-form__title.css);
 @import url(../blocks/edit-form/__input/edit-form__input.css);
 @import url(../blocks/edit-form/__save/edit-form__save.css);
-@import url(../blocks/edit-form/__close/edit-form__close.css);
