--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -3,6 +3,7 @@
   width: 150px;
   height: 50px;
   border: 2px solid #fff;
+  border-radius: 2px;
   grid-area: add-button;
   transition: opacity 0.3s linear;
   background-image: url(../../../images/plus-icon.svg);
