--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,4 +1,4 @@
-.edit-form__input {
+.form__input {
   width: 100%;
   height: 27px;
   padding: 0;
@@ -9,10 +9,10 @@
   font-size: 14px;
   line-height: 17px;
 }
-.edit-form__input:first-of-type {
+.form__input:first-of-type {
   margin-top: 0;
 }
-.edit-form__input:active, 
-.edit-form__input:focus {
+.form__input:active, 
+.form__input:focus {
   outline: none;
 }
