--- a/blocks/overlay/__popup/overlay__popup.css
+++ b/blocks/overlay/__popup/overlay__popup.css
@@ -1,4 +1,4 @@
-.popup {
+.overlay__popup {
   width: 430px;
   padding: 36px;
   box-sizing: border-box;
@@ -9,7 +9,7 @@
   border-radius: 10px;
 }
 @media (max-width: 768px) {
-  .popup {
+  .overlay__popup {
     width: 282px;
     padding: 25px 22px;
   }  
