feat: добавить возможность добавлять новые карточки, добавить возможность увеличивать изображения

--- a/blocks/overlay/__close/overlay__close.css
+++ b/blocks/overlay/__close/overlay__close.css
@@ -6,8 +6,8 @@
   width: 32px;
   height: 32px;
   position: absolute;
-  top: -10%;
-  right: -10%;
+  top: -40px;
+  right: -40px;
   background-repeat: no-repeat;
   transform: translate(-10%, -10%);
   transition: opacity 0.5s linear;
@@ -21,7 +21,7 @@
     width: 20px;
     height: 20px;
     background-size: contain;
-    top: -13%;
-    right: 3%;
+    top: -40px;
+    right: 0px;
   }  
 }
