--- a/blocks/overlay/_shown/overlay_shown.css
+++ b/blocks/overlay/_shown/overlay_shown.css
@@ -1,5 +1,15 @@
+@-webkit-keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
+@keyframes fadeIn {
+  from { opacity: 0; }
+    to { opacity: 1; }
+}
 .overlay_shown {
   display: flex;
   align-items: center;
   justify-content: center;
+  -webkit-animation: fadeIn 0.4s ease-out;
+  animation: fadeIn 0.4s ease-out;
 }
