--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,7 +1,7 @@
 .profile__edit {
   padding: 0;
   height: 24px;
-  width: 24px;
+  min-width: 24px;
   display: inline;
   margin-left: 18px;
   transition: opacity 0.3s linear;
@@ -18,7 +18,7 @@
 @media (max-width: 768px) {
   .profile__edit {
     height: 18px;
-    width: 18px;
+    min-width: 18px;
     margin-left: 10px;
     background-image: url(../../../images/pencil-icon-mobile.svg);
   }  
