--- a/pages/index.css
+++ b/pages/index.css
@@ -22,6 +22,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__trash/element__trash.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -29,9 +30,15 @@
 @import url(../blocks/overlay/overlay.css);
 @import url(../blocks/overlay/_shown/overlay_shown.css);
 @import url(../blocks/overlay/__popup/overlay__popup.css);
+@import url(../blocks/overlay/__popup/_image/overlay__popup_image.css);
+@import url(../blocks/overlay/__figure/overlay__figure.css);
+@import url(../blocks/overlay/__figure/_shown/overlay__figure_shown.css);
+@import url(../blocks/overlay/__image/overlay__image.css);
+@import url(../blocks/overlay/__caption/overlay__caption.css);
 @import url(../blocks/overlay/__close/overlay__close.css);
 
 @import url(../blocks/form/form.css);
+@import url(../blocks/form/_shown/form_shown.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__save/form__save.css);
