--- a/blocks/overlay/_shown/overlay_shown.css
+++ b/blocks/overlay/_shown/overlay_shown.css
@@ -1,15 +1,8 @@
-@-webkit-keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-@keyframes fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
 .overlay_shown {
   display: flex;
   align-items: center;
   justify-content: center;
-  -webkit-animation: fade-in 0.4s ease-out;
-  animation: fade-in 0.4s ease-out;
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0s, opacity 0.3s ease-out;
 }
