feat: добавить валидацию форм + закрытие форм кликом на overlay и по кнопке escape

--- a/pages/index.css
+++ b/pages/index.css
@@ -45,4 +45,7 @@
 @import url(../blocks/form/_shown/form_shown.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input-error/_shown/form__input-error_shown.css);
 @import url(../blocks/form/__save/form__save.css);
+@import url(../blocks/form/__save/_disabled/form__save_disabled.css);
