fix: исправить размечания ревьюера

--- a/blocks/popup/_shown/popup_shown.css
+++ b/blocks/popup/_shown/popup_shown.css
@@ -1,3 +1,8 @@
 .popup_shown {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0.3s, opacity 0.3s ease-out;
 }
