--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,15 +1,15 @@
-.popup_edit-profile {
+.popup__container {
   width: 430px;
   padding: 36px;
   box-sizing: border-box;
-  position: relative;
   background-color: #fff;
   color: #000;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  position: relative;
 }
 @media (max-width: 768px) {
-  .popup_edit-profile {
+  .popup__container {
     width: 282px;
     padding: 25px 22px;
   }  
