feat: создать классы Card и FormValidator

--- a/blocks/popup/_shown/popup_shown.css
+++ b/blocks/popup/_shown/popup_shown.css
@@ -1,8 +1,6 @@
 .popup_shown {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 1;
   visibility: visible;
-  transition: visibility 0.3s, opacity 0.3s ease-out;
+  opacity: 1;
+  transition: opacity 0.3s, visibility 0.3s ease-out;
 }
