--- a/src/blocks/form/__title/form__title.css
+++ b/src/blocks/form/__title/form__title.css
@@ -1,12 +1,11 @@
 .form__title {
-  margin: 0 0 44px 0;
+  margin: 0;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
 }
 @media (max-width: 768px) {
   .form__title {
-    margin-bottom: 69px;
     font-size: 18px;
     line-height: 22px;
   }  
