--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,8 @@
 .profile__avatar {
-  height: 120px;
+  /* height: 120px; */
   object-fit: cover;
   border-radius: 50%;
+  width: 100%;
+  height: 100%;
   grid-area: profile__avatar;
 }
