--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,8 @@
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-overlay/profile__avatar-overlay.css);
+@import url(../blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__edit-line/profile__edit-line.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -22,6 +24,8 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__like-count/element__like-count.css);
+@import url(../blocks/element/__like-wrapper/element__like-wrapper.css);
 @import url(../blocks/element/__trash/element__trash.css);
 
 @import url(../blocks/footer/footer.css);
